major progress on latex

--- a/LaTeX/barebones/character_formatting.tex
+++ b/LaTeX/barebones/character_formatting.tex
@@ -1,9 +1,14 @@
+%covered
+% 1. different character formats and size
+% 2. different paragraph formats 
+
+
 \documentclass[12pt]{report}
 \title{How to organize text and chunks of text}
+
 \begin{document}
 \maketitle
 
-\chapter{Text}
 \section{Text types}
 \textbf{Hello, I'm bold text}
 
@@ -92,9 +97,4 @@ For arbitrary font sizes, we use a pretty weird format. Try not to use if not ne
 
 {\fontsize{50}{55}\selectfont \fontfamily{ppl}\selectfont This text is in size 50}
 
-\chapter{Organizing Text}
-
-\chapter{Paragraph formatting}
-
-Include how to make dividers, centering, etc
 \end{document}
