--- a/LaTeX/barebones/toc_and_sections.tex
+++ b/LaTeX/barebones/toc_and_sections.tex
@@ -1,25 +1,10 @@
+
 \documentclass[12pt]{report}
-%article: for journals, documentations, short writing
-%proc: for proceedings (rarer)
-%report: longer report (allows chapters)
-%book: for real books
-%memoir: for real books with free reign over the style 
-%letter: for writing letters
-%beamer: for presentations 
-
-\usepackage{lipsum} %used for demonstration purposes 
-%THIS SECTION IS KNOWN AS THE PREAMBLE
-\title{This is a title}
-\author{Maximilian Du}
-\date{May 2021}
-%END PREAMBLE
-
+\usepackage{lipsum}
 \begin{document}
-\pagenumbering{arabic} %roman, arabic, gobble (removes)
-
-\maketitle
 
 \tableofcontents %constructs table of contents 
+\addcontentsline{toc}{section}{Artificial contents} %puts a reference to where this command is called 
 
 \part{Hi i'm a part}
 This is a part. Parts allow you to organize larger thoughts. Note how a part's text is separated from the cover page. I'm going to add some lipsum to fill up space 
@@ -34,7 +19,11 @@ Chapters and parts are only available in report and book classes
 \lipsum[1]
 
 \section{Hi I'm a section}
-This section allows you to organize ideas inside a chapter 
+This section allows you to organize ideas inside a chapter.
+
+
+\section*{Hi I'm an uncounted section}
+Anything with a "*" will not be indexed by number. 
 
 \lipsum[1]
 
