--- a/LaTeX/theBasics/paragraph_formatting.tex
+++ b/LaTeX/theBasics/paragraph_formatting.tex
@@ -16,6 +16,8 @@ Two slashes will force end a line, but it does NOT make a paragraph
 
 \indent \indent You can artificially force an indent 
 
+\noindent You can also artificially force a non-indent 
+
 this quick brownfox jumped over the lazy dogs, hwho in a fit of metaphysical glory, decided to walk around the room like a bunch of bears sucking on dry apples. 
 
 \begin{center}
