glossaries and index

--- a/LaTeX/academic/references_and_linking.tex
+++ b/LaTeX/academic/references_and_linking.tex
@@ -11,6 +11,7 @@
     linktocpage = false, %if true, the numbers and not the text in a TOC are links 
     pdftitle={Overleaf Example}, %this is what the pdf reader will display as the filename
     pdfauthor={John Doe},
+    hyperfootnotes=false, %footnote hyperlinks often don't work 
     pdfstartpage = 1,
     bookmarks = true, %display bookmarks in adobe
     bookmarksopen = false, %expand all bookmarks in adobe
