--- a/LaTeX/academic/algorithms.tex
+++ b/LaTeX/academic/algorithms.tex
@@ -13,13 +13,13 @@
 \KwIn{input here }
 \KwOut{output here}
 \tcc{comment here}
+\For{condition}{stuff here}
 \While{condition}{Stuff here}
 \If{ condition }{ \Return{return value}}
-\ElseIf{ condition }{ 
-	\tcc{comment}
-	\Return{ stuff}\\ %needed to add another comment line 
-	\tcc{comment}
+\ElseIf{ condition }{ stuff
 }
+\Else{stuff}
+Return{ stuff}\\ %needed to add another comment line 
 \caption{caption}\label{alg:alg2}
 \end{algorithm}
 
