--- a/LaTeX/academic/math.tex
+++ b/LaTeX/academic/math.tex
@@ -194,6 +194,7 @@ $$\mathtt{3x^2 = 3 + 3}$$
 \theoremstyle{remark} %italicized title, roman body
 \newtheorem*{remarks}{Remark title} %this gives an unnumbered environment 
 
+%the "proof" environment exists by default 
 \begin{mytheorem}
 This is a test of what the theorem environment is capable of 
     \begin{myproof}
