--- a/LaTeX/academic/figures.tex
+++ b/LaTeX/academic/figures.tex
@@ -37,6 +37,8 @@
 \includegraphics[width=0.5\textwidth, right]{demo} %left, right, center, inner, outer 
 
 \section{Figure environment}
+%if you use H, T, or B, you make the figure NOT a floating environment. This can have a lot of benefits if you are putting a figure inside somewhere that doesn't take floats, like a tcolorbox 
+
 %this is a standard, vanilla figure environment. For most of your purposes, this is the only thing you need 
 %h means here, t means top, b means bottom, p means special page, "!" suffix means force, and H means PLACE RIGHT HERE ( requires \usepackage{float})
 \begin{figure}[h]
