--- a/LaTeX/academic/algorithms.tex
+++ b/LaTeX/academic/algorithms.tex
@@ -4,6 +4,7 @@
 
 \begin{document}
 
+%use "H" if you are in a floating environment 
 \begin{algorithm}[h!]
 \SetKwFunction{FName}{FunctionNameHere}
 \SetKwProg{Fn}{Function}{:}{}
