added pset solutions environment

--- a/LaTeX/academic/algorithms.tex
+++ b/LaTeX/academic/algorithms.tex
@@ -20,7 +20,7 @@
 \ElseIf{ condition }{ stuff
 }
 \Else{stuff}
-Return{ stuff}\\ %needed to add another comment line 
+\Return{stuff}\\ %needed to add another comment line 
 \caption{caption}\label{alg:alg2}
 \end{algorithm}
 
