cleaned up latex

--- a/LaTeX/aux_demo_files/ref.bib
+++ b/LaTeX/aux_demo_files/ref.bib
@@ -2,7 +2,7 @@ While the citation process and this whole file is best dealt with by an external
 
 %articles are journals, magazines, or newspapers
 @article{article,
-author = {Du, Max and Astley, Richard},
+author = {Astley, Richard},
 journal = {Journal of Test},
 pages = {167--174},
 title = {{Text here will be displayed VerBaTiM}},
@@ -12,7 +12,7 @@ year = {2020},
 
 %for normal books 
 @book{book,
-author = {Du, Max},
+author = {Rock, Crocodile},
 title = {On the Effectiveness of LaTeX}, 
 publisher = {Stanford University},
 year = {2020},
@@ -20,7 +20,7 @@ year = {2020},
 
 %for "self-published" or otherwise non-publisher books 
 @booklet{booklet, 
-author = {Du, Max},
+author = {Nobel, Alfred},
 title = {On the Effectiveness of LaTeX, booklet edition}, 
 year = {2020},
 howpublished = {My Website},
@@ -37,7 +37,7 @@ chapter = {2--4},
 
 %for parts of a book 
 @inbook{inbookpages,
-author = {Du, Max},
+author = {Munroe, Randall},
 title = {correct horse battery stapler}, 
 publisher = {Stanford University},
 year = {2020},
@@ -46,7 +46,7 @@ pages = {20--42},
 
 %for technical manuals 
 @manual{manual, 
-author = {Du, Max},
+author = {Phillips, Phillip},
 title = {Using LaTeX: a comprehensive manual}, 
 year = {2020},
 organization = {Stanford University}
@@ -67,8 +67,8 @@ year = {1980},
 
 %for thesis writing  
 @mastersthesis{thesis, 
-author = {Du, Max},
-title = {Using LaTeX: a comprehensive manual}, 
+author = {Edison, Thomas},
+title = {Why rabbits are all you need}, 
 year = {2020},
 school = {Stanford University}
 },
@@ -76,7 +76,7 @@ school = {Stanford University}
 %for everything else 
 @misc{misc, 
 author = {Du, Max},
-title = {Random random}, 
+title = {Caring for your computer mice}, 
 year = {2020},
 howpublished = {Leaflet}
 },
@@ -84,11 +84,11 @@ howpublished = {Leaflet}
 %for online websites (not news articles!). You can add the accession date 
 @online{online, 
 author = {Du, Max},
-title = {richard rotation}, 
+title = {Get Rickrolled!}, 
 year = {2020},
-url = {www.google.com},
+url = {https://www.youtube.com/watch?v=dQw4w9WgXcQ},
 urldate = {2020-08-23},
-notes = {aasdfasdfasdfasdfasf},
+notes = {The rickroll is a cultural phenomenon that involves clicking on a link that leads you to Rick Astley's song, "never gonna give you up"},
 },
 
 %see the cheat sheet for more details. 
