--- a/LaTeX/citing.tex
+++ b/LaTeX/citing.tex
@@ -10,7 +10,7 @@
     % draft (displays file handles)
     % ieee
     % mla 
-\addbibresource{ref.bib}
+\addbibresource{aux_demo_files/ref.bib}
 
 
 \begin{document}
