--- a/LaTeX/figures.tex
+++ b/LaTeX/figures.tex
@@ -15,7 +15,7 @@
 
 \usepackage{lipsum}
 
-\graphicspath{{./}} %the path here will be the default directory that \includegraphics looks for
+\graphicspath{{./aux_demo_files/}} %the path here will be the default directory that \includegraphics looks for
 
 % If you have two files with the same name but one is png and one is pdf, this command tells it to use the png first. This is because it's typically cheaper to compile with the png. However, for better quality (like for publication), you would switch the order of the two extensions. 
 % Images in vector form should be a pdf, and images in bitmap form should be in png or jpg 
