--- a/LaTeX/special_packages/code.tex
+++ b/LaTeX/special_packages/code.tex
@@ -34,11 +34,15 @@
 \begin{document}
 \lstlistoflistings
 
+\vspace{5em} 
+
 \begin{verbatim}
-Any %\4a39nsdfq928365iuhg %@#$^$%^Q#$% text can go here
+Any text can go here
 \end{verbatim}
 
-\verb|\begin{verbatim}| %this is an inline version 
+\vspace{5em} 
+
+\verb|any text here including \begin{verbatim} is ok| %this is an inline version 
 
 %the language parameter allows for collor highlighting 
 %caption is optional
@@ -48,8 +52,8 @@ for i in range(10):
     print(i)
 \end{lstlisting}
 
-Divider 
+\vspace{5em} 
 
 %import from file, specifyign the lines of code 
-\lstinputlisting[language=Python, firstline = 2, lastline = 6]{code.py}
+\lstinputlisting[language=Python, firstline = 2, lastline = 6]{aux_demo_files/code.py}
 \end{document}
