--- a/LaTeX/style_files.tex
+++ b/LaTeX/style_files.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{report}
 
-\usepackage[doublespace]{mystyle} %your own "package!"
+\usepackage[doublespace]{aux_demo_files/mystyle} %your own "package!"
 
 %you can use this to make your own style file, which allows you to put all the nasty preamble stuff in a separate file 
 \begin{document}
