--- a/LaTeX/figures.tex
+++ b/LaTeX/figures.tex
@@ -83,6 +83,7 @@ This is the copy-paste working-out-of-the-box version
 \label{fig:main}
 \end{figure}
 
+\clearpage %prints all figures up to this point. Prevents text below this from cutting into an image. 
 
 
 \end{document}
