--- a/LaTeX/special_packages/tikz.tex
+++ b/LaTeX/special_packages/tikz.tex
@@ -47,6 +47,7 @@
 \begin{tikzpicture}
 %the cardinal direction is where the text should be attached to the end
 \draw[thick,->] node[anchor=north] {left node} (0,0) -- (4.5,0) node[anchor=south] {right node};
+\node [anchor=west] (note) at (-1,3) {\Large Note};
 \draw[thick,->] (0,0) -- (0,4.5);
 \end{tikzpicture}
 
